--- a/styles.css
+++ b/styles.css
@@ -56,21 +56,71 @@ border-bottom: 2px solid #262626;
     border: 0;
     font-weight: bold;
     padding: 10px 20px;
-    background: blue;
+    background: skyblue;
     color: #fff;
     font-size: 15px;
 }.btn:hover {
     opacity: 0.9;
 }
-/* showcase */
-.showcase {
+ /* showcase */
+ .showcase {
     width: 100%;
     height: 400px;
-    background: url(assets/microsoft-image.webp)
+    background: url('assets/microsoft-image.webp') 
     no-repeat center center/cover;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: flex-end;
-}
+    align-items: left;
+    text-align: left;
+    justify-content: center;
+    padding-bottom: 100px;
+    padding-left: 40px;
+ }
+ .showcase h2, .showcase p {
+   margin-bottom: 10px; 
+ }
+ .showcase .btn 1 {
+    margin-top: 20px;
+ }
+
+ /* cards */
+ .cards {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 15px;
+ }
+ .cards img {
+    width: 100%;
+    margin-bottom: 20px;
+ }
+ .cards h2 {
+    margin-bottom: 5px;
+ }
+ .cards a {
+    display: inline-block;
+    padding-top: 10px;
+    color: #0067b8;
+    text-transform: lower case;
+    font-weight: bold;
+ }
+ .cards a:hover i {
+    margin-left: 10px;
+ }
+/* ios */
+ .ios {
+    width: 1100px;
+    height: 500px;
+    background: url(assets/microsoft-ios.webp) no-repeat
+    center center/cover;
+ }
+
+ .ios .content {
+    width: 100%;
+    padding: 100px 0 0 30px;
+ }
+ .ios p {
+    margin: 10px 0 20px;
+ }
+ 
+
+
