--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ ul{
 }
 .container{
     width: 90%;
-    max-width: 1100px;
+    max-width: 1500px;
     margin: auto;
 }
 /* nav */
@@ -65,7 +65,7 @@ border-bottom: 2px solid #262626;
  /* showcase */
  .showcase {
     width: 100%;
-    height: 400px;
+    height: 700px;
     background: url('assets/microsoft-image.webp') 
     no-repeat center center/cover;
     display: flex;
@@ -86,8 +86,8 @@ border-bottom: 2px solid #262626;
  /* cards */
  .cards {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 15px;
+    grid-template-columns: repeat( 4, 1fr);
+    grid-gap: 20px;
  }
  .cards img {
     width: 100%;
@@ -107,20 +107,18 @@ border-bottom: 2px solid #262626;
     margin-left: 10px;
  }
 /* ios */
- .ios {
-    width: 1100px;
-    height: 500px;
-    background: url(assets/microsoft-ios.webp) no-repeat
-    center center/cover;
- }
-
- .ios .content {
+.ios {
     width: 100%;
-    padding: 100px 0 0 30px;
- }
- .ios p {
+    height: 350px;
+    background: url('assets/microsoft-ios.webp') no-repeat center center/cover;
+}
+.ios .content {
+    width: 80%;
+    padding: 50px 0 0 30;
+}
+.ios p {
     margin: 10px 0 20px;
- }
+}
  
 
 
