--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,59 @@ border-bottom: 2px solid #262626;
 .follow * {
     margin-right: 10px;
 }
+/* links */
+.Links {
+    background: #f2f2f2;
+    color: #616161;
+    font-size: 12px;
+    padding: 35px 0;
+}
+.Links-inner {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: grid;
+ grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+ align-items: flex-start;
+ justify-content: center;
+}
+.Links li{
+    line-height: 2.8;
+}
+*/ footer */
+.footer {
+    background: #f2f2f2;
+    color: #616161;
+    font-size: 12px;
+    padding: 20px 0;
+}
+.footer-inner {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 20px 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer div{
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+.footer div i {
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer li {
+    margin-right: 30px;
+    margin-bottom: 20px;
+}
+
  
 
 
