--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,67 @@
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;  
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-body{
+
+body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background: white;
     color: black;
     font-size: 15px;
     line-height: 1.5;
 }
+
 a {
     color: #262626;
     text-decoration: none;
 }
-ul{
+
+ul {
     list-style: none;
 }
-.container{
+
+.container {
     width: 90%;
     max-width: 1500px;
     margin: auto;
 }
+
 /* nav */
-.main-nav{
+.main-nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
- height: 60px;
- padding: 20px 0;
- font-size: 13px;   
+    height: 60px;
+    padding: 20px 0;
+    font-size: 13px;
 }
+
 .main-nav .logo {
     width: 110px;
 }
+
 .main-nav ul {
     display: flex;
 }
+
 .main-nav ul li {
-  padding: 0 10px;  
+    padding: 0 10px;
 }
+
 .main-nav ul li a {
     border-bottom: 2;
 }
+
 .main-nav ul li a:hover {
-border-bottom: 2px solid #262626;
+    border-bottom: 2px solid #262626;
 }
+
 .main-nav ul.main-menu {
     flex: 1;
     margin-left: 20px;
 }
+
 .btn {
     cursor: pointer;
     display: inline-block;
@@ -59,15 +71,17 @@ border-bottom: 2px solid #262626;
     background: skyblue;
     color: #fff;
     font-size: 15px;
-}.btn:hover {
+}
+
+.btn:hover {
     opacity: 0.9;
 }
- /* showcase */
- .showcase {
+
+/* showcase */
+.showcase {
     width: 100%;
     height: 700px;
-    background: url('assets/microsoft-image.webp') 
-    no-repeat center center/cover;
+    background: url('assets/microsoft-image.webp') no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -75,50 +89,61 @@ border-bottom: 2px solid #262626;
     justify-content: center;
     padding-bottom: 100px;
     padding-left: 40px;
- }
- .showcase h2, .showcase p {
-   margin-bottom: 10px; 
- }
- .showcase .btn 1 {
-    margin-top: 20px;
- }
+}
 
- /* cards */
- .cards {
+.showcase h2,
+.showcase p {
+    margin-bottom: 10px;
+}
+
+.showcase .btn 1 {
+    margin-top: 20px;
+}
+
+/* cards */
+.cards {
     display: grid;
-    grid-template-columns: repeat( 4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
- }
- .cards img {
+}
+
+.cards img {
     width: 100%;
     margin-bottom: 20px;
- }
- .cards h2 {
+}
+
+.cards h2 {
     margin-bottom: 5px;
- }
- .cards a {
+}
+
+.cards a {
     display: inline-block;
     padding-top: 10px;
     color: #0067b8;
     text-transform: lower case;
     font-weight: bold;
- }
- .cards a:hover i {
+}
+
+.cards a:hover i {
     margin-left: 10px;
- }
+}
+
 /* ios */
 .ios {
     width: 100%;
     height: 350px;
     background: url('assets/microsoft-ios.webp') no-repeat center center/cover;
 }
+
 .ios .content {
     width: 80%;
     padding: 50px 0 0 30;
 }
+
 .ios p {
     margin: 10px 0 20px;
 }
+
 /* follow */
 .follow {
     display: flex;
@@ -126,9 +151,11 @@ border-bottom: 2px solid #262626;
     justify-content: flex-start;
     margin: 30px 0 30px;
 }
+
 .follow * {
     margin-right: 10px;
 }
+
 /* links */
 .Links {
     background: #f2f2f2;
@@ -136,52 +163,61 @@ border-bottom: 2px solid #262626;
     font-size: 12px;
     padding: 35px 0;
 }
+
 .Links-inner {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 20px;
     display: grid;
- grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
- align-items: flex-start;
- justify-content: center;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+    align-items: flex-start;
+    justify-content: center;
 }
-.Links li{
+
+.Links li {
     line-height: 2.8;
 }
-*/ footer */
-.footer {
+
+footer {
     background: #f2f2f2;
     color: #616161;
     font-size: 12px;
     padding: 20px 0;
-}
-.footer-inner {
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 20px 0 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.footer div{
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-}
-.footer div i {
-    display: flex;
-    flex-wrap: wrap;
-}
-.footer ul{
-    display: flex;
-    flex-wrap: wrap;
-}
-.footer li {
-    margin-right: 30px;
-    margin-bottom: 20px;
+& .footer-inner {
+        max-width: 1100px;
+        margin: 0 auto;
+        padding: 0 20px 0 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    & ul {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    & li {
+        margin-right: 30px;
+        margin-bottom: 20px;
+    }
+
+    & div {
+        margin-bottom: 20px;
+
+        display: flex;
+        align-items: center;
+
+        & i {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+
+
+    }
+
 }
 
- 
 
 
